# projeto_inicial

./: Aula_01  README.md  main.py
Aula_01/: .gitignore  README.md  kpi.py  main.py  tempCodeRunnerFile.py  teste.txt
Aula_02/: README.md  exercicios.py  main.py
Aula_03/: .gitignore  README.md  desafio.py  exercicios.py  main.py  tempCodeRunnerFile.py
Aula_04/: README.md  arquivos.py  aula_algoritmo.py  data_science.py  exempl.csv  exemplo_lista.py  exercicios.py  main.py  tempCodeRunnerFile.py
Aula_05/: .gitignore
Aula_05/One-Billion-Row-Challenge-Python/: README.md
Aula_05/src/: using_polars_v2.py
Aula_07/: .gitignore  etl.py  exemplo_00.py  exercicios.py  main.py  tempCodeRunnerFile.python
Aula_08/: .gitignore  README.md  etl.py  exemplo_00.py  pyproject.toml
