[project]
name = "aula-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme",email = "carlosqa.ch@gmail.com"}
]
readme = "README.md"
python = "^3.11"
pandera = "^0.18.0"
pandas = "^2.2.1"
fastparquet = "^2024.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
